[package]
name = "sched_ext_ops"
version = "0.0.1"
description = "Rust structs representing sched-ext-related types in Linux."
keywords = ["linux", "sched-ext", "scheduler"]
license = "MIT"
authors = ["Michal Rostecki <vadorovsky@protonmail.com>"]
repository = "https://github.com/vadorovsky/sched_ext_ops"
readme = "README.md"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.1"
